<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bangtanrut.songklod.bookgazebo.ModeOne">

    <LinearLayout
        android:id="@+id/linTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/my_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/mode_one"
            android:textColor="@color/white"
            android:textSize="@dimen/h1"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout

        android:id="@+id/linToBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linTop"
        android:background="@color/colorPrimaryLinght"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView

                android:layout_width="@dimen/icon1"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_mode_two" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/mode_two"
                android:textColor="@color/white"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView

                android:layout_width="@dimen/icon1"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_mode_two" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/mode_three"
                android:textColor="@color/white"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnSendData"
        android:layout_below="@+id/linToBar"
        android:background="@color/colorPrimaryLinght2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/my_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detail_name"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sala"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sala_detail"
                android:inputType="text" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="23/04/2017"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <ImageView
                    android:src="@mipmap/ic_calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>
            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_checkbox"
                android:textStyle="bold"
                android:textSize= "18sp" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox1"
                android:textSize="18sp"
                android:textStyle="bold" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox2"
                android:textSize="18sp"
                android:textStyle="bold" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox3"
                android:textSize="18sp"
                android:textStyle="bold" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox4"
                android:textSize="18sp"
                android:textStyle="bold" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox5"
                android:textSize="18sp"
                android:textStyle="bold" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:text="@string/checkbox6"
                android:textSize="18sp"
                android:textStyle="bold" />
            <CheckBox
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
                android:lines="3"
            android:text="@string/checkbox7"
            android:textSize="18sp"
            android:textStyle="bold" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox8"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton9"
                android:textSize="18sp"
                android:textStyle="bold" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton10"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSendData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="@dimen/h2"
        android:textStyle="bold" />


</RelativeLayout>
