<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLinght2"
    tools:context="bangtanrut.songklod.bookgazebo.ModeTwo">

    <LinearLayout
        android:id="@+id/linTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="@dimen/my_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/detail_merits"
            android:textColor="@color/white"
            android:textSize="@dimen/h1"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_below="@+id/linTop"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_margin="@dimen/my_padding"
            android:hint="@string/hint_date"
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />

    </LinearLayout>

    <LinearLayout

        android:id="@+id/linToBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:background="@color/colorPrimaryLinght"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView

                android:layout_width="@dimen/icon1"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_mode_two" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/mode_three"
                android:textColor="@color/white"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <RadioGroup
        android:orientation="horizontal"
        android:layout_margin="@dimen/my_padding"
        android:id="@+id/radiogroup"
        android:layout_below="@+id/linToBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/merits1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/my_padding"
            android:layout_weight="1"
            android:background="@color/colorPrimaryLinght2"
            android:text="@string/merits1" />

        <RadioButton
            android:id="@+id/merits2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/my_padding"
            android:layout_weight="1"
            android:background="@color/colorPrimaryLinght2"
            android:text="@string/merits2" />

        <RadioButton
            android:id="@+id/merits3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/my_padding"
            android:layout_weight="1"
            android:background="@color/colorPrimaryLinght2"
            android:text="@string/merits3" />

    </RadioGroup>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSendData"
        android:layout_below="@+id/radiogroup"
        android:background="@color/colorPrimaryLinght2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/my_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_merits"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name_merits"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/merits_phone"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_merits_phone"
                android:inputType="text" />


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSendData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="@dimen/h2"
        android:textStyle="bold" />

</RelativeLayout>
